--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ click==8.1.7
 fastapi==0.115.4
 h11==0.14.0
 idna==3.10
+pika==1.3.2
+pika-stubs==0.1.3
 pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
